--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <link href="css/style.css" type="text/css" rel="stylesheet" media="screen,projection"/>
 
   <!-- Fonts Google -->
-  <link href="https://fonts.googleapis.com/css2?family=Baloo+Paaji+2:wght@500&family=Nunito:wght@300;600&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Delius&family=Nanum+Pen+Script&display=swap" rel="stylesheet">
 
   <!-- Font Awesome -->
   <script src="https://kit.fontawesome.com/0c76e1ad7d.js" crossorigin="anonymous"></script>
@@ -22,13 +22,13 @@
 
 	<!-- Fixed Navbar-->
   <div class="navbar-fixed">
-    <nav class="white" role="navigation">
+    <nav class="teal accent-2" role="navigation">
       <div class="nav-wrapper container">
-        <a id="logo-container" href="#"><image src="LogoTrasp.PNG" class="img-resized"></a>
-        <ul class="right hide-on-med-and-down">
+        <a id="logo-container" href="#"><image src="LogoTrasp.png" class="img-resized"></a>
+        <ul class="right hide-on-med-and-down sezioni">
           <li><a href="#servizio">Servizio</a></li>
           <li><a href="#registrazione">Registrati</a></li>
-          <li><a href="#comune">Vuoi una Fed nel Tuo Comune?"</a></li>
+          <li><a href="#comune">Vuoi una FED nel Tuo Comune?"</a></li>
         </ul>
         <a href="#" data-target="nav-mobile" class="sidenav-trigger"><i class="material-icons">menu</i></a>
       </div>
@@ -46,18 +46,18 @@
     <div class="section-intro no-pad-bot">
       <div class="container">
         <br><br>
-        <h1 class="header center orange-text text-darken-1">Aree Cani come non ne hai mai viste Prima!</h1>
+        <h1 class="header center black-text">Aree Cani come non ne hai mai viste Prima!</h1>
         <div class="row center">
-          <h5 class="header-subtitle orange-text text-darken-1">Cambia e Vivi a pieno l'esperienza di uscire con il Tuo Cane, anche lui te ne sarà grato</h5>
+          <h5 class="header-subtitle black-text">Cambia e Vivi a pieno l'esperienza di uscire con il Tuo Cane, anche lui te ne sara' grato</h5>
         </div>
         <div class="row center">
-          <a href="#servizio" class="btn-large waves-effect waves-light orange darken-1">Come Funziona</a>
+          <a href="#servizio" class="btn-large waves-effect teal accent-2 black-text">Come Funziona</a>
         </div>
         <br><br>
 
       </div>
     </div>
-    <div class="parallax"><img src="background1.jpg" alt="Unsplashed background img 1"></div>
+    <div class="parallax"><img src="Header.png" alt="Unsplashed background img 1"></div>
   </div>
 
 <!-- Servizio -->
@@ -66,30 +66,37 @@
       <div class="col-servizio">
         <!--   Icon Section   -->
         <div class="row">
-          <div class="col s12 m4">
+          <div class="col s12 m3">
             <div class="icon-block">
-              <h2 class="center orange-text text-darken-1"><i class="material-icons">star</i></h2>
+              <h2 class="center black-text text-darken-1"><i class="material-icons">star</i></h2>
               <h5 class="center">Smart</h5>
               <br>
-              <h5 class="center light orange-text text-darken-1">Scarica l'app, Avvicina il tuo Mobile al dispositivo per entrare e coditi la FED</h5>
+              <h5 class="center light black-text">Scarica l'app, Avvicina il tuo Mobile al dispositivo per entrare e coditi la FED</h5>
             </div>
           </div>
 
-          <div class="col s12 m4">
+          <div class="col s12 m3">
             <div class="icon-block">
-              <h2 class="center orange-text text-darken-1"><i class="material-icons">devices_other</i></h2>
+              <h2 class="center black-text"><i class="material-icons">devices_other</i></h2>
               <h5 class="center">Fresh</h5>
               <br>
-              <h5 class="center light orange-text text-darken-1">Troverai Aree Cani Pulite, Sanificate e Disinfestate</h5>
+              <h5 class="center light black-text">Troverai Aree Cani Pulite, Sanificate e Disinfestate</h5>
             </div>
           </div>
 
-          <div class="col s12 m4">
+          <div class="col s12 m3">
             <div class="icon-block">
-              <h2 class="center orange-text text-darken-1"><i class="material-icons">flash_on</i></h2>
+              <h2 class="center black-text"><i class="material-icons">flash_on</i></h2>
               <h5 class="center">Geolocated</h5>
               <br>
-              <h5 class="center light orange-text text-darken-1">Ti basta l'app per accedere a qualsiasi FED sparsa sul Territorio</h5>
+              <h5 class="center light black-text">Ti basta l'app per accedere a qualsiasi FED sparsa sul Territorio</h5>
+
+              <div class="col s12 m3">
+            <div class="icon-block">
+              <h2 class="center black-text"><i class="material-icons">flash_on</i></h2>
+              <h5 class="center">Geolocated</h5>
+              <br>
+              <h5 class="center light black-text">Ti basta l'app per accedere a qualsiasi FED sparsa sul Territorio</h5>
             </div>
           </div>
         </div>
