--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 
       </div>
     </div>
-    <div class="parallax"><img src="Header.png" alt="Unsplashed background img 1"></div>
+    <div class="parallax"><img src="Header.jpg" alt="Unsplashed background img 1"></div>
   </div>
 
 <!-- Servizio -->
@@ -90,8 +90,10 @@
               <h5 class="center">Geolocated</h5>
               <br>
               <h5 class="center light black-text">Ti basta l'app per accedere a qualsiasi FED sparsa sul Territorio</h5>
+			</div>
+		  </div>
 
-              <div class="col s12 m3">
+          <div class="col s12 m3">
             <div class="icon-block">
               <h2 class="center black-text"><i class="material-icons">flash_on</i></h2>
               <h5 class="center">Geolocated</h5>
