--- a/index.html
+++ b/index.html
@@ -12,8 +12,7 @@
   <link href="css/style.css" type="text/css" rel="stylesheet" media="screen,projection"/>
 
   <!-- Fonts Google -->
-  <link href="https://fonts.googleapis.com/css2?family=Delius&family=Nanum+Pen+Script&display=swap" rel="stylesheet">
-
+  <link href="https://fonts.googleapis.com/css2?family=Advent+Pro:wght@400;700&display=swap" rel="stylesheet">
   <!-- Font Awesome -->
   <script src="https://kit.fontawesome.com/0c76e1ad7d.js" crossorigin="anonymous"></script>
 
@@ -25,7 +24,7 @@
     <nav class="teal accent-2" role="navigation">
       <div class="nav-wrapper container">
         <a id="logo-container" href="#"><image src="LogoTrasp.png" class="img-resized"></a>
-        <ul class="right hide-on-med-and-down sezioni">
+        <ul class="sezioni right hide-on-med-and-down">
           <li><a href="#servizio">Servizio</a></li>
           <li><a href="#registrazione">Registrati</a></li>
           <li><a href="#comune">Vuoi una FED nel Tuo Comune?"</a></li>
@@ -46,9 +45,9 @@
     <div class="section-intro no-pad-bot">
       <div class="container">
         <br><br>
-        <h1 class="header center black-text">Aree Cani come non ne hai mai viste Prima!</h1>
+        <h1 class="header center orange-text">Aree Cani come non ne hai mai viste Prima!</h1>
         <div class="row center">
-          <h5 class="header-subtitle black-text">Cambia e Vivi a pieno l'esperienza di uscire con il Tuo Cane, anche lui te ne sara' grato</h5>
+          <h5 class="header-subtitle orange-text">Cambia e Vivi a pieno l'esperienza di uscire con il Tuo Cane, anche lui te ne sara' grato</h5>
         </div>
         <div class="row center">
           <a href="#servizio" class="btn-large waves-effect teal accent-2 black-text">Come Funziona</a>
@@ -57,7 +56,7 @@
 
       </div>
     </div>
-    <div class="parallax"><img src="Header.jpg" alt="Unsplashed background img 1"></div>
+    <div class="parallax"><img src="img1.png" alt="Unsplashed background img 1"></div>
   </div>
 
 <!-- Servizio -->
@@ -68,37 +67,37 @@
         <div class="row">
           <div class="col s12 m3">
             <div class="icon-block">
-              <h2 class="center black-text text-darken-1"><i class="material-icons">star</i></h2>
-              <h5 class="center">Smart</h5>
+              <h2 class="center"><i class="material-icons orange-text">mobile_screen_share</i></h2>
+              <h4 class="center">Registrati</h4>
               <br>
-              <h5 class="center light black-text">Scarica l'app, Avvicina il tuo Mobile al dispositivo per entrare e coditi la FED</h5>
+              <h5 class="center light black-text">Scarica l'app, Inserisci le tue informazioni e Scegli un metodo di Pagamento Digitale Disponibile</h5>
             </div>
           </div>
 
           <div class="col s12 m3">
             <div class="icon-block">
-              <h2 class="center black-text"><i class="material-icons">devices_other</i></h2>
-              <h5 class="center">Fresh</h5>
+              <h2 class="center"><i class="material-icons orange-text">location_on</i></h2>
+              <h4 class="center">Geolocated</h4>
               <br>
-              <h5 class="center light black-text">Troverai Aree Cani Pulite, Sanificate e Disinfestate</h5>
+              <h5 class="center light black-text">Apri l'App e cerca la FED più Vicina a te</h5>
             </div>
           </div>
 
           <div class="col s12 m3">
             <div class="icon-block">
-              <h2 class="center black-text"><i class="material-icons">flash_on</i></h2>
-              <h5 class="center">Geolocated</h5>
+              <h2 class="center"><i class="material-icons orange-text">phonelink_lock</i></h2>
+              <h4 class="center">Sblocca il Lucchetto</h4>
               <br>
-              <h5 class="center light black-text">Ti basta l'app per accedere a qualsiasi FED sparsa sul Territorio</h5>
+              <h5 class="center light black-text">Avvicina il tuo Telefono e Punta il QR Code che trovi all'ingresso</h5>
 			</div>
 		  </div>
 
           <div class="col s12 m3">
             <div class="icon-block">
-              <h2 class="center black-text"><i class="material-icons">flash_on</i></h2>
-              <h5 class="center">Geolocated</h5>
+              <h2 class="center"><i class="material-icons orange-text">pets</i></h2>
+              <h4 class="center">Enjoy</h4>
               <br>
-              <h5 class="center light black-text">Ti basta l'app per accedere a qualsiasi FED sparsa sul Territorio</h5>
+              <h5 class="center light black-text">Ora divertiti con il tuo Cane. Troverai Aree Cani Pulite, Diovertenti, Sanificate e Disinfestate</h5>
             </div>
           </div>
         </div>
@@ -111,9 +110,8 @@
     <div class="section-registrazione no-pad-bot">
       <div class="container">
         <div class="row center">
-          <i class="material-icons registrazione-icon white-text">new_releases</i>
-          <h3 class="col s12 light white-text">Chi dice che un'Area Cani dev'essere Sporca Triste e mal Servita?</h3>
-          <h5 class=" col s12 registrazione-subtitle header white-text">Registrati e Rimani aggiornato sul rilascio della Versione Beta</h5>
+          <h3 class="col s12 light orange-text">Chi dice che un'Area Cani dev'essere Sporca Triste e mal Servita?</h3>
+          <h5 class=" col s12 registrazione-subtitle header orange-text">Registrati e Rimani aggiornato sul rilascio della Versione Beta</h5>
           <div class="row">
             <div class="input-field col s12 l6 offset-l3">
             	<!-- Begin Mailchimp Signup Form -->
@@ -121,7 +119,7 @@
 					<form action="https://gmail.us8.list-manage.com/subscribe/post?u=e80bcd8f391ac04261c946f20&amp;id=eac10bc988" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
 						<div id="mc_embed_signup_scroll">
 							<input type="email" value="" name="EMAIL" class="required email validate white center black-text" id="mce-EMAIL" placeholder="Inserisci qui la tua Email" required>
-							<button class="btn btn-registrazione waves-effect waves-light orange white-text " type="submit" name="action">Voglio Registrami!</button>
+							<button class="btn btn-registrazione waves-effect waves-light teal accent-2 black-text " type="submit" name="action">Voglio Registrami!</button>
 					    </div>
 					</form>
 				</div>
@@ -131,7 +129,7 @@
         </div>
       </div>
     </div>
-    <div class="parallax"><img src="background4.jpg" alt="Unsplashed background img 2"></div>
+    <div class="parallax"><img src="img2.png" alt="Unsplashed background img 2"></div>
   </div>
 
 <!-- Comune -->
