--- a/index.html
+++ b/index.html
@@ -70,14 +70,14 @@
               <h2 class="center"><i class="material-icons orange-text">mobile_screen_share</i></h2>
               <h4 class="center">Registrati</h4>
               <br>
-              <h5 class="center light black-text">Scarica l'app, Inserisci le tue informazioni e Scegli un metodo di Pagamento Digitale Disponibile</h5>
+              <h5 class="center light black-text">Scarica l'App, Inserisci le tue informazioni e Scegli un metodo di Pagamento Digitale Disponibile</h5>
             </div>
           </div>
 
           <div class="col s12 m3">
             <div class="icon-block">
               <h2 class="center"><i class="material-icons orange-text">location_on</i></h2>
-              <h4 class="center">Geolocated</h4>
+              <h4 class="center">Geolocalizzati</h4>
               <br>
               <h5 class="center light black-text">Apri l'App e cerca la FED più Vicina a te</h5>
             </div>
@@ -97,7 +97,7 @@
               <h2 class="center"><i class="material-icons orange-text">pets</i></h2>
               <h4 class="center">Enjoy</h4>
               <br>
-              <h5 class="center light black-text">Ora divertiti con il tuo Cane. Troverai Aree Cani Pulite, Diovertenti, Sanificate e Disinfestate</h5>
+              <h5 class="center light black-text">Ora divertiti con il tuo Cane. Troverai Aree Cani Pulite, Divertenti, Sanificate e Disinfestate</h5>
             </div>
           </div>
         </div>
@@ -143,7 +143,7 @@
           <h5 class="col s12 comune-subtitle">Compila il seguente Questionario e fissiamo una chiacchierata. 
           <br> 
           Ti Ricontatteremo nel giro di 24h.</h5>
-          <a class="typeform-share col l6 offset-l3 btn btn-comune waves-effect waves-light orange white-text" href="https://paolo176.typeform.com/to/QeUett" data-mode="drawer_left" target="_blank">Vuoi una Fed nel Mio Comune!</a>
+          <a class="typeform-share col l6 offset-l3 btn btn-comune waves-effect waves-light orange white-text" href="https://paolo176.typeform.com/to/QeUett" data-mode="drawer_left" target="_blank">Voglio una FED nel Mio Comune!</a>
         </div>
       </div>
 
