--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <link href="css/style.css" type="text/css" rel="stylesheet" media="screen,projection"/>
 
   <!-- Fonts Google -->
-  <link href="https://fonts.googleapis.com/css2?family=Advent+Pro:wght@400;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Advent+Pro:wght@400;700&family=Permanent+Marker&display=swap" rel="stylesheet">
   <!-- Font Awesome -->
   <script src="https://kit.fontawesome.com/0c76e1ad7d.js" crossorigin="anonymous"></script>
 
@@ -56,7 +56,7 @@
 
       </div>
     </div>
-    <div class="parallax"><img src="img1.png" alt="Unsplashed background img 1"></div>
+    <div class="parallax"><img src="img1.jpg" alt="Unsplashed background img 1"></div>
   </div>
 
 <!-- Servizio -->
@@ -68,36 +68,33 @@
           <div class="col s12 m3">
             <div class="icon-block">
               <h2 class="center"><i class="material-icons orange-text">mobile_screen_share</i></h2>
-              <h4 class="center">Registrati</h4>
+              <h5 class="icon-name center">Registrati</h5>
               <br>
               <h5 class="center light black-text">Scarica l'App, Inserisci le tue informazioni e Scegli un metodo di Pagamento Digitale Disponibile</h5>
             </div>
           </div>
-
           <div class="col s12 m3">
             <div class="icon-block">
               <h2 class="center"><i class="material-icons orange-text">location_on</i></h2>
-              <h4 class="center">Geolocalizzati</h4>
+              <h5 class="icon-name center">Geolocalizzati</h5>
               <br>
               <h5 class="center light black-text">Apri l'App e cerca la FED più Vicina a te</h5>
             </div>
           </div>
-
           <div class="col s12 m3">
             <div class="icon-block">
               <h2 class="center"><i class="material-icons orange-text">phonelink_lock</i></h2>
-              <h4 class="center">Sblocca il Lucchetto</h4>
+              <h5 class="icon-name center">Sblocca il Lucchetto</h5>
               <br>
               <h5 class="center light black-text">Avvicina il tuo Telefono e Punta il QR Code che trovi all'ingresso</h5>
-			</div>
-		  </div>
-
+			     </div>
+		      </div>
           <div class="col s12 m3">
             <div class="icon-block">
               <h2 class="center"><i class="material-icons orange-text">pets</i></h2>
-              <h4 class="center">Enjoy</h4>
+              <h5 class="icon-name center">Enjoy</h5>
               <br>
-              <h5 class="center light black-text">Ora divertiti con il tuo Cane. Troverai Aree Cani Pulite, Divertenti, Sanificate e Disinfestate</h5>
+              <h5 class="center light black-text">Ora divertiti con il tuo Cane. Troverai Aree Cani Sanificate, Divertenti e Digitalizzate</h5>
             </div>
           </div>
         </div>
@@ -110,8 +107,8 @@
     <div class="section-registrazione no-pad-bot">
       <div class="container">
         <div class="row center">
-          <h3 class="col s12 light orange-text">Chi dice che un'Area Cani dev'essere Sporca Triste e mal Servita?</h3>
-          <h5 class=" col s12 registrazione-subtitle header orange-text">Registrati e Rimani aggiornato sul rilascio della Versione Beta</h5>
+          <h3 class="header col s12 light white-text">Chi dice che un'Area Cani dev'essere Sporca Triste e mal Servita?</h3>
+          <h5 class=" col s12 registrazione-subtitle header white-text">Registrati e Rimani aggiornato sul rilascio della Versione Beta</h5>
           <div class="row">
             <div class="input-field col s12 l6 offset-l3">
             	<!-- Begin Mailchimp Signup Form -->
@@ -119,7 +116,7 @@
 					<form action="https://gmail.us8.list-manage.com/subscribe/post?u=e80bcd8f391ac04261c946f20&amp;id=eac10bc988" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
 						<div id="mc_embed_signup_scroll">
 							<input type="email" value="" name="EMAIL" class="required email validate white center black-text" id="mce-EMAIL" placeholder="Inserisci qui la tua Email" required>
-							<button class="btn btn-registrazione waves-effect waves-light teal accent-2 black-text " type="submit" name="action">Voglio Registrami!</button>
+							<button class="btn btn-registrazione waves-effect waves-light teal accent-2 black-text " type="submit" name="action">Voglio Registrami alla Versione Beta!</button>
 					    </div>
 					</form>
 				</div>
@@ -129,7 +126,7 @@
         </div>
       </div>
     </div>
-    <div class="parallax"><img src="img2.png" alt="Unsplashed background img 2"></div>
+    <div class="parallax"><img src="img3.jpg" alt="Unsplashed background img 2"></div>
   </div>
 
 <!-- Comune -->
