--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@
         <a id="logo-container" href="#"><image src="LogoTrasp.png" class="img-resized"></a>
         <ul class="sezioni right hide-on-med-and-down">
           <li><a href="#servizio">Servizio</a></li>
-          <li><a href="#registrazione">Registrati</a></li>
+          <li><a href="#registrazione">Registrati alla Beta</a></li>
+          <li><a href="#pricing">Pricing</a></li>
           <li><a href="#comune">Vuoi una FED nel Tuo Comune?"</a></li>
         </ul>
         <a href="#" data-target="nav-mobile" class="sidenav-trigger"><i class="material-icons">menu</i></a>
@@ -36,7 +37,8 @@
 
   <ul id="nav-mobile" class="sidenav">
     <li><a href="#servizio">Servizio</a></li>
-    <li><a href="#registrazione">Registrati</a></li>
+    <li><a href="#registrazione">Registrati alla Beta</a></li>
+    <li><a href="#pricing">Pricing</a></li>
     <li><a href="#comune">Vuoi una Fed nel Tuo Comune?</a></li>
   </ul> 
 
@@ -45,15 +47,14 @@
     <div class="section-intro no-pad-bot">
       <div class="container">
         <br><br>
-        <h1 class="header center orange-text">Aree Cani come non ne hai mai viste Prima!</h1>
+        <h1 class="intro-header center orange-text">Aree Cani come non ne hai mai viste Prima!</h1>
         <div class="row center">
-          <h5 class="header-subtitle orange-text">Cambia e Vivi a pieno l'esperienza di uscire con il Tuo Cane, anche lui te ne sara' grato</h5>
+          <h5 class="headerintro-subtitle white-text">L'esperienza di uscire con il Tuo Cane sta per Cambiare</h5>
         </div>
         <div class="row center">
           <a href="#servizio" class="btn-large waves-effect teal accent-2 black-text">Come Funziona</a>
         </div>
         <br><br>
-
       </div>
     </div>
     <div class="parallax"><img src="img1.jpg" alt="Unsplashed background img 1"></div>
@@ -70,7 +71,7 @@
               <h2 class="center"><i class="material-icons orange-text">mobile_screen_share</i></h2>
               <h5 class="icon-name center">Registrati</h5>
               <br>
-              <h5 class="center light black-text">Scarica l'App, Inserisci le tue informazioni e Scegli un metodo di Pagamento Digitale Disponibile</h5>
+              <h5 class="center light black-text">Scarica l'App e Inserisci le tue informazioni</h5>
             </div>
           </div>
           <div class="col s12 m3">
@@ -86,7 +87,7 @@
               <h2 class="center"><i class="material-icons orange-text">phonelink_lock</i></h2>
               <h5 class="icon-name center">Sblocca il Lucchetto</h5>
               <br>
-              <h5 class="center light black-text">Avvicina il tuo Telefono e Punta il QR Code che trovi all'ingresso</h5>
+              <h5 class="center light black-text">Avvicina il tuo Telefono e Punta il QR Code che trovi all'ingresso per Sbloccare l'ingresso</h5>
 			     </div>
 		      </div>
           <div class="col s12 m3">
@@ -107,8 +108,8 @@
     <div class="section-registrazione no-pad-bot">
       <div class="container">
         <div class="row center">
-          <h3 class="header col s12 light white-text">Chi dice che un'Area Cani dev'essere Sporca Triste e mal Servita?</h3>
-          <h5 class=" col s12 registrazione-subtitle header white-text">Registrati e Rimani aggiornato sul rilascio della Versione Beta</h5>
+          <h3 class="registrazione-header col s12 light white-text">Chi dice che un'Area Cani dev'essere Sporca Triste e mal Servita?</h3>
+          <h5 class="col s12 registrazione-subtitle white-text">Registrati Gratuitamente e Rimani aggiornato sul rilascio della Versione Beta</h5>
           <div class="row">
             <div class="input-field col s12 l6 offset-l3">
             	<!-- Begin Mailchimp Signup Form -->
@@ -134,13 +135,13 @@
     <div class="section">
 
       <div class="row">
-        <div class="col s12 center">
+        <div class="comune-header col s12 center">
           <i class="material-icons comune-icon orange-text">local_play</i>
           <h3>Vuoi una Fed nel Tuo Comune?</h3>
-          <h5 class="col s12 comune-subtitle">Compila il seguente Questionario e fissiamo una chiacchierata. 
+          <h5 class="header-subtitle col s12 comune-subtitle">Compila il seguente Questionario e fissiamo una chiacchierata. 
           <br> 
           Ti Ricontatteremo nel giro di 24h.</h5>
-          <a class="typeform-share col l6 offset-l3 btn btn-comune waves-effect waves-light orange white-text" href="https://paolo176.typeform.com/to/QeUett" data-mode="drawer_left" target="_blank">Voglio una FED nel Mio Comune!</a>
+          <a class="btn-comune typeform-share col l6 offset-l3 btn btn-comune waves-effect waves-light orange white-text" href="https://paolo176.typeform.com/to/QeUett" data-mode="drawer_left" target="_blank">Voglio una FED nel Mio Comune!</a>
         </div>
       </div>
 
