--- a/index.html
+++ b/index.html
@@ -27,7 +27,6 @@
         <ul class="sezioni right hide-on-med-and-down">
           <li><a href="#servizio">Servizio</a></li>
           <li><a href="#registrazione">Registrati alla Beta</a></li>
-          <li><a href="#pricing">Pricing</a></li>
           <li><a href="#comune">Vuoi una FED nel Tuo Comune?"</a></li>
         </ul>
         <a href="#" data-target="nav-mobile" class="sidenav-trigger"><i class="material-icons">menu</i></a>
@@ -38,7 +37,6 @@
   <ul id="nav-mobile" class="sidenav">
     <li><a href="#servizio">Servizio</a></li>
     <li><a href="#registrazione">Registrati alla Beta</a></li>
-    <li><a href="#pricing">Pricing</a></li>
     <li><a href="#comune">Vuoi una Fed nel Tuo Comune?</a></li>
   </ul> 
 
@@ -52,12 +50,12 @@
           <h5 class="headerintro-subtitle white-text">L'esperienza di uscire con il Tuo Cane sta per Cambiare</h5>
         </div>
         <div class="row center">
-          <a href="#servizio" class="btn-large waves-effect teal accent-2 black-text">Come Funziona</a>
+          <a href="#servizio" class="btn-large waves-effect orange white-text">Come Funziona</a>
         </div>
         <br><br>
       </div>
     </div>
-    <div class="parallax"><img src="img1.jpg" alt="Unsplashed background img 1"></div>
+    <div class="parallax"><img src="img1b.png" alt="Unsplashed background img 1"></div>
   </div>
 
 <!-- Servizio -->
@@ -108,8 +106,8 @@
     <div class="section-registrazione no-pad-bot">
       <div class="container">
         <div class="row center">
-          <h3 class="registrazione-header col s12 light white-text">Chi dice che un'Area Cani dev'essere Sporca Triste e mal Servita?</h3>
-          <h5 class="col s12 registrazione-subtitle white-text">Registrati Gratuitamente e Rimani aggiornato sul rilascio della Versione Beta</h5>
+          <h3 class="registrazione-header col s12 light black-text">Chi dice che un'Area Cani dev'essere Sporca Triste e mal Servita?</h3>
+          <h5 class="col s12 registrazione-subtitle orange-text">Registrati Gratuitamente e Rimani aggiornato sul rilascio della Versione Beta</h5>
           <div class="row">
             <div class="input-field col s12 l6 offset-l3">
             	<!-- Begin Mailchimp Signup Form -->
@@ -117,7 +115,7 @@
 					<form action="https://gmail.us8.list-manage.com/subscribe/post?u=e80bcd8f391ac04261c946f20&amp;id=eac10bc988" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
 						<div id="mc_embed_signup_scroll">
 							<input type="email" value="" name="EMAIL" class="required email validate white center black-text" id="mce-EMAIL" placeholder="Inserisci qui la tua Email" required>
-							<button class="btn btn-registrazione waves-effect waves-light teal accent-2 black-text " type="submit" name="action">Voglio Registrami alla Versione Beta!</button>
+							<button class="btn btn-registrazione waves-effect waves-light orange white-text " type="submit" name="action">Voglio Registrami alla Versione Beta!</button>
 					    </div>
 					</form>
 				</div>
@@ -127,13 +125,12 @@
         </div>
       </div>
     </div>
-    <div class="parallax"><img src="img3.jpg" alt="Unsplashed background img 2"></div>
+    <div class="parallax"><img src="img3b.png" alt="Unsplashed background img 2"></div>
   </div>
 
 <!-- Comune -->
   <div id="comune" class="container">
     <div class="section">
-
       <div class="row">
         <div class="comune-header col s12 center">
           <i class="material-icons comune-icon orange-text">local_play</i>
@@ -144,7 +141,6 @@
           <a class="btn-comune typeform-share col l6 offset-l3 btn btn-comune waves-effect waves-light orange white-text" href="https://paolo176.typeform.com/to/QeUett" data-mode="drawer_left" target="_blank">Voglio una FED nel Mio Comune!</a>
         </div>
       </div>
-
     </div>
   </div>
 
