--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
           <li><a href="#servizio">Servizio</a></li>
           <li><a href="#registrazione">Registrati alla Beta</a></li>
           <li><a href="#comune">Vuoi una FED nel Tuo Comune?"</a></li>
+          <li><a href="#pricing">Pricing</a></li>
         </ul>
         <a href="#" data-target="nav-mobile" class="sidenav-trigger"><i class="material-icons">menu</i></a>
       </div>
@@ -38,6 +39,7 @@
     <li><a href="#servizio">Servizio</a></li>
     <li><a href="#registrazione">Registrati alla Beta</a></li>
     <li><a href="#comune">Vuoi una Fed nel Tuo Comune?</a></li>
+    <li><a href="#pricing">Pricing</a></li>
   </ul> 
 
 <!-- Intro -->
@@ -142,6 +144,33 @@
         </div>
       </div>
     </div>
+  </div>
+
+<!-- Pricing -->
+  <div id="pricing" class="parallax-container valign-wrapper">
+    <div class="section-pricing no-pad-bot">
+      <div class="container">
+        <div class="row center">
+          <h3 class="pricing-header col s12 light black-text">Stiamo Lavorando per Capire quel è il Prezzo più adatto, Vuoi Aiutarci?</h3>
+          <h5 class="col s12 pricing-subtitle orange-text">Aiutaci a migliorare il Nostro Servizio e avrai un Codice Sconto all'attivazione del Servizio</h5>
+          <div class="row">
+            <div class="input-field col s12 l6 offset-l3">
+              <!-- Begin Mailchimp Signup Form -->
+        <div id="mc_embed_signup">
+          <form action="https://gmail.us8.list-manage.com/subscribe/post?u=e80bcd8f391ac04261c946f20&amp;id=eac10bc988" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+            <div id="mc_embed_signup_scroll">
+              <input type="email" value="" name="EMAIL" class="required email validate white center black-text" id="mce-EMAIL" placeholder="Inserisci qui la tua Email" required>
+              <button class="btn btn-pricing waves-effect waves-light orange white-text " type="submit" name="action">Voglio Aiutare a Trovare il Giusto Prezzo</button>
+              </div>
+          </form>
+        </div>
+      <!--End mc_embed_signup-->
+      </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="parallax"><img src="img2b.png" alt="Unsplashed background img 2"></div>
   </div>
 
 <!-- Footer -->
