--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
         </div>
       </div>
     </div>
-    <div class="parallax"><img src="img2b.png" alt="Unsplashed background img 2"></div>
+    <div class="parallax"><img src="img2bb.png" alt="Unsplashed background img 2"></div>
   </div>
 
 <!-- Footer -->
