--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
 	<!-- Fixed Navbar-->
   <div class="navbar-fixed">
-    <nav class="teal accent-2" role="navigation">
+    <nav class="nav-bar" role="navigation">
       <div class="nav-wrapper container">
         <a id="logo-container" href="#"><image src="LogoTrasp.png" class="img-resized"></a>
         <ul class="sezioni right hide-on-med-and-down">
@@ -30,12 +30,12 @@
           <li><a href="#comune">Vuoi una FED nel Tuo Comune?"</a></li>
           <li><a href="#pricing">Pricing</a></li>
         </ul>
-        <a href="#" data-target="nav-mobile" class="sidenav-trigger"><i class="material-icons">menu</i></a>
+        <a href="#" data-target="nav-mobile" class="sidenav-trigger"><i class="material-icons white-text">menu</i></a>
       </div>
     </nav> 
   </div>
 
-  <ul id="nav-mobile" class="sidenav">
+  <ul id="nav-mobile" class="sidenav white black-text">
     <li><a href="#servizio">Servizio</a></li>
     <li><a href="#registrazione">Registrati alla Beta</a></li>
     <li><a href="#comune">Vuoi una Fed nel Tuo Comune?</a></li>
@@ -49,7 +49,7 @@
         <br><br>
         <h1 class="intro-header center orange-text">Aree Cani come non ne hai mai viste Prima!</h1>
         <div class="row center">
-          <h5 class="headerintro-subtitle white-text">L'esperienza di uscire con il Tuo Cane sta per Cambiare</h5>
+          <h5 class="headerintro-subtitle">L'esperienza di uscire con il Tuo Cane sta per Cambiare</h5>
         </div>
         <div class="row center">
           <a href="#servizio" class="btn-large waves-effect orange white-text">Come Funziona</a>
@@ -178,7 +178,7 @@
     <div class="container">
       <div class="row">
         <div class="col l12 s12 center">
-          <h5 class="white-text">Contattaci</h5>
+          <h5 class="black-text">Contattaci</h5>
           <a href="mailto:fedcamps@gmail.com" target="_blank" class="social-icon">
           <i class="far fa-envelope"></i></a>
           <a href="https://https://www.facebook.com/fedcamps" target="_blank" class="social-icon">
