--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         <br><br>
       </div>
     </div>
-    <div class="parallax"><img src="img1b.png" alt="Unsplashed background img 1"></div>
+    <div class="parallax"><img src="img4.jpg" alt="Unsplashed background img 1"></div>
   </div>
 
 <!-- Servizio -->
@@ -108,8 +108,8 @@
     <div class="section-registrazione no-pad-bot">
       <div class="container">
         <div class="row center">
-          <h3 class="registrazione-header col s12 light black-text">Chi dice che un'Area Cani dev'essere Sporca Triste e mal Servita?</h3>
-          <h5 class="col s12 registrazione-subtitle orange-text">Registrati Gratuitamente e Rimani aggiornato sul rilascio della Versione Beta</h5>
+          <h3 class="registrazione-header col s12 light orange-text">Chi dice che un'Area Cani dev'essere Sporca Triste e mal Servita?</h3>
+          <h5 class="col s12 registrazione-subtitle white-text">Registrati Gratuitamente e Rimani aggiornato sul rilascio della Versione Beta</h5>
           <div class="row">
             <div class="input-field col s12 l6 offset-l3">
             	<!-- Begin Mailchimp Signup Form -->
@@ -127,7 +127,7 @@
         </div>
       </div>
     </div>
-    <div class="parallax"><img src="img3b.png" alt="Unsplashed background img 2"></div>
+    <div class="parallax"><img src="img1.jpg" alt="Unsplashed background img 2"></div>
   </div>
 
 <!-- Comune -->
@@ -151,8 +151,8 @@
     <div class="section-pricing no-pad-bot">
       <div class="container">
         <div class="row center">
-          <h3 class="pricing-header col s12 light black-text">Stiamo Lavorando per Capire quel è il Prezzo più adatto, Vuoi Aiutarci?</h3>
-          <h5 class="col s12 pricing-subtitle orange-text">Aiutaci a migliorare il Nostro Servizio e avrai un Codice Sconto all'attivazione del Servizio</h5>
+          <h3 class="pricing-header col s12 light orange-text">Stiamo Lavorando per Capire quel è il Prezzo più adatto, Vuoi Aiutarci?</h3>
+          <h5 class="col s12 pricing-subtitle white-text">Aiutaci a migliorare il Nostro Servizio e avrai un Codice Sconto all'attivazione del Servizio</h5>
           <div class="row">
             <div class="input-field col s12 l6 offset-l3">
               <!-- Begin Mailchimp Signup Form -->
@@ -170,7 +170,7 @@
         </div>
       </div>
     </div>
-    <div class="parallax"><img src="img2bb.png" alt="Unsplashed background img 2"></div>
+    <div class="parallax"><img src="img3.jpg" alt="Unsplashed background img 2"></div>
   </div>
 
 <!-- Footer -->
