--- a/index.html
+++ b/index.html
@@ -155,17 +155,8 @@
           <h5 class="col s12 pricing-subtitle white-text">Aiutaci a migliorare il Nostro Servizio e avrai un Codice Sconto all'attivazione del Servizio</h5>
           <div class="row">
             <div class="input-field col s12 l6 offset-l3">
-              <!-- Begin Mailchimp Signup Form -->
-        <div id="mc_embed_signup">
-          <form action="https://gmail.us8.list-manage.com/subscribe/post?u=e80bcd8f391ac04261c946f20&amp;id=eac10bc988" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
-            <div id="mc_embed_signup_scroll">
-              <input type="email" value="" name="EMAIL" class="required email validate white center black-text" id="mce-EMAIL" placeholder="Inserisci qui la tua Email" required>
-              <button class="btn btn-pricing waves-effect waves-light orange white-text " type="submit" name="action">Voglio Aiutare a Trovare il Giusto Prezzo</button>
-              </div>
-          </form>
-        </div>
-      <!--End mc_embed_signup-->
-      </div>
+              <a class="btn-comune typeform-share col l6 offset-l3 btn btn-comune waves-effect waves-light orange white-text" href="https://paolo176.typeform.com/to/EIRdw4" data-mode="drawer_left" target="_blank">Voglio Aiutare a Trovare il Giusto Prezzo</a>
+            </div>
           </div>
         </div>
       </div>
