--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
         <br><br>
       </div>
     </div>
-    <div class="parallax"><img src="img4.jpg" alt="Unsplashed background img 1"></div>
+    <div class="parallax"><img src="img3.jpg" alt="Unsplashed background img 1"></div>
   </div>
 
 <!-- Servizio -->
@@ -140,6 +140,7 @@
 					</form>
 				</div>
 			<!--End mc_embed_signup-->
+      <script type="text/javascript" src="//downloads.mailchimp.com/js/signup-forms/popup/unique-methods/embed.js" data-dojo-config="usePlainJson: true, isDebug: false"></script><script type="text/javascript">window.dojoRequire(["mojo/signup-forms/Loader"], function(L) { L.start({"baseUrl":"mc.us7.list-manage.com","uuid":"fcc017a0e6e39440dbc365f4e","lid":"3e307af8bc","uniqueMethods":true}) })</script>
 			</div>
           </div>
         </div>
@@ -179,7 +180,7 @@
         </div>
       </div>
     </div>
-    <div class="parallax"><img src="img3.jpg" alt="Unsplashed background img 2"></div>
+    <div class="parallax"><img src="img6.jpg" alt="Unsplashed background img 2"></div>
   </div>
 
 <!-- Footer -->
