--- a/index.html
+++ b/index.html
@@ -130,11 +130,12 @@
           <h5 class="col s12 registrazione-subtitle white-text">Registrati Gratuitamente e Rimani aggiornato sul rilascio della Versione Beta</h5>
           <div class="row">
             <div class="input-field col s12 l6 offset-l3">
-            	<!-- Begin Mailchimp Signup Form -->
-				<div id="mc_embed_signup">
-					<form action="https://gmail.us8.list-manage.com/subscribe/post?u=e80bcd8f391ac04261c946f20&amp;id=eac10bc988" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
-						<div id="mc_embed_signup_scroll">
-							<input type="email" value="" name="EMAIL" class="required email validate white center black-text" id="mce-EMAIL" placeholder="Inserisci qui la tua Email" required>
+				<!-- Begin Mailchimp Signup Form -->
+        <div id="mc_embed_signup">
+          <form action="https://facebook.us7.list-manage.com/subscribe/post?u=fcc017a0e6e39440dbc365f4e&amp;id=3e307af8bc" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+              <div id="mc_embed_signup_scroll">
+              <input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL">
+              </div>
 							<button class="btn btn-registrazione waves-effect waves-light orange white-text " type="submit" name="action">Voglio Registrami alla Versione Beta!</button>
 					    </div>
 					</form>
