--- a/index.html
+++ b/index.html
@@ -131,17 +131,16 @@
           <div class="row">
             <div class="input-field col s12 l6 offset-l3">
             	<!-- Begin Mailchimp Signup Form -->
-				<div id="mc_embed_signup">
-					<form action="https://gmail.us8.list-manage.com/subscribe/post?u=e80bcd8f391ac04261c946f20&amp;id=eac10bc988" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
-						<div id="mc_embed_signup_scroll">
-							<input type="email" value="" name="EMAIL" class="required email validate white center black-text" id="mce-EMAIL" placeholder="Inserisci qui la tua Email" required>
-							<button class="btn btn-registrazione waves-effect waves-light orange white-text " type="submit" name="action">Voglio Registrami alla Versione Beta!</button>
-					    </div>
-					</form>
-				</div>
-			<!--End mc_embed_signup-->
-      <script type="text/javascript" src="//downloads.mailchimp.com/js/signup-forms/popup/unique-methods/embed.js" data-dojo-config="usePlainJson: true, isDebug: false"></script><script type="text/javascript">window.dojoRequire(["mojo/signup-forms/Loader"], function(L) { L.start({"baseUrl":"mc.us7.list-manage.com","uuid":"fcc017a0e6e39440dbc365f4e","lid":"3e307af8bc","uniqueMethods":true}) })</script>
-			</div>
+                  <div id="mc_embed_signup">
+                    <form action="https://facebook.us7.list-manage.com/subscribe/post?u=fcc017a0e6e39440dbc365f4e&amp;id=3e307af8bc" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+                      <div id="mc_embed_signup_scroll">
+                        <input type="email" value="" name="EMAIL" class="email validate white center black-text" id="mce-EMAIL" placeholder="inserisci qui la tua email" required>
+                          <button class="btn btn-registrazione waves-effect waves-light orange white-text " type="submit" name="action">Voglio Registrami alla Versione Beta!</button>
+                      </div>
+                    </form>
+                  </div>
+              <!--End mc_embed_signup-->
+            </div>
           </div>
         </div>
       </div>
@@ -211,6 +210,8 @@
   <script src="js/materialize.js"></script>
   <script src="js/init.js"></script>
   <script> (function() { var qs,js,q,s,d=document, gi=d.getElementById, ce=d.createElement, gt=d.getElementsByTagName, id="typef_orm_share", b="https://embed.typeform.com/"; if(!gi.call(d,id)){ js=ce.call(d,"script"); js.id=id; js.src=b+"embed.js"; q=gt.call(d,"script")[0]; q.parentNode.insertBefore(js,q) } })() </script>
+    <!--pop Up registrazione beta-->
+  <script type="text/javascript" src="//downloads.mailchimp.com/js/signup-forms/popup/unique-methods/embed.js" data-dojo-config="usePlainJson: true, isDebug: false"></script><script type="text/javascript">window.dojoRequire(["mojo/signup-forms/Loader"], function(L) { L.start({"baseUrl":"mc.us7.list-manage.com","uuid":"fcc017a0e6e39440dbc365f4e","lid":"3e307af8bc","uniqueMethods":true}) })</script>
 
   </body>
 </html>
