--- a/thank-you.html
+++ b/thank-you.html
@@ -44,7 +44,7 @@
         <br><br>
         <h1 class="intro-header center orange-text">GRAZIE MILLE!</h1>
         <div class="row center">
-          <h5 class="headerintro-subtitle">Ti Aggiorneremo il Prima Possibile sul Rilascio della Versione Beta</h5>
+          <h5 class="headerintro-subtitle orange-text">Ti Aggiorneremo il Prima Possibile sul Rilascio della Versione Beta</h5>
         </div>
       </div>
     </div>
@@ -52,11 +52,11 @@
   </div>
 
 <!-- Footer -->
-  <footer class="page-footer">
+  <footer class="page-footer white">
     <div class="container">
       <div class="row">
         <div class="col l12 s12 center">
-          <h5 class="black-text">Contattaci</h5>
+          <h5 class="black-text">Se hai bisogno Contattaci o meglio ancora seguici sui Social</h5>
           <a href="mailto:fedcamps@gmail.com" target="_blank" class="social-icon">
           <i class="far fa-envelope"></i></a>
           <a href="https://https://www.facebook.com/fedcamps" target="_blank" class="social-icon">
@@ -67,7 +67,7 @@
       </div>
     </div>
     <div class="footer-copyright">
-      <div class="container"> 2020 &copy
+      <div class="container center black-text"> 2020 &copy
       Made with 🚀 by <a class="black-text" href="http://tittytwisterdigital.com">TittyTwisterDigital💜</a>
       </div>
     </div>
