--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
           <h5 class="header-subtitle col s12 comune-subtitle">Compila il seguente Questionario e fissiamo una chiacchierata. 
           <br> 
           Ti Ricontatteremo nel giro di 24h.</h5>
-          <a class="btn-comune typeform-share col l6 offset-l3 btn btn-comune waves-effect waves-light orange white-text" href="https://paolo176.typeform.com/to/EIRdw4" data-mode="drawer_left" target="_blank">Voglio una FED nel Mio Comune!</a>
+          <a class="btn-comune col l6 offset-l3 btn btn-comune waves-effect waves-light orange white-text" href="https://linktr.ee/FedCampsApp" data-mode="drawer_left" target="_blank">Voglio una FED nel Mio Comune!</a>
         </div>
       </div>
     </div>
