--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
           <h5 class="col s12 pricing-subtitle white-text">Aiutaci a migliorare il Nostro Servizio e avrai un Codice Sconto all'attivazione del Servizio</h5>
           <div class="row">
             <div class="input-field col s12 l6 offset-l3">
-              <a class="btn-comune col l6 offset-l3 btn btn-comune waves-effect waves-light orange white-text" href="https:/linktr.ee/FedCampsApp" data-mode="drawer_left" target="_blank">Figo, Voglio Aiutarvi!</a>
+              <a class="btn-comune typeform-share col l6 offset-l3 btn btn-comune waves-effect waves-light orange white-text" href="https://paolo176.typeform.com/to/wOyGYT" data-mode="drawer_left" target="_blank">Figo, Voglio Aiutarvi!</a>
             </div>
           </div>
         </div>
