--- a/index.html
+++ b/index.html
@@ -170,10 +170,21 @@
       <div class="container">
         <div class="row center">
           <h3 class="pricing-header col s12 light orange-text">Stiamo Lavorando per Capire quel è il Prezzo più adatto, Vuoi Aiutarci?</h3>
-          <h5 class="col s12 pricing-subtitle white-text">Aiutaci a migliorare il Nostro Servizio e avrai un Codice Sconto all'attivazione del Servizio</h5>
+          <h5 class="col s12 pricing-subtitle white-text">Aiutaci a migliorare il Nostro Servizio e avrai un Codice Sconto all'attivazione del Sito!
+          <br>
+          Ti invieremo 5 Brevissime domande via Email</h5>
           <div class="row">
             <div class="input-field col s12 l6 offset-l3">
-              <a class="btn-comune typeform-share col l6 offset-l3 btn btn-comune waves-effect waves-light orange white-text" href="https://paolo176.typeform.com/to/wOyGYT" data-mode="drawer_left" target="_blank">Figo, Voglio Aiutarvi!</a>
+              <!-- Begin Mailchimp Signup Form -->
+                  <div id="mc_embed_signup">
+                    <form action="https://facebook.us7.list-manage.com/subscribe/post?u=fcc017a0e6e39440dbc365f4e&amp;id=3e307af8bc" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+                      <div id="mc_embed_signup_scroll">
+                        <input type="email" value="" name="EMAIL" class="email validate white center black-text" id="mce-EMAIL" placeholder="inserisci qui la tua email" required>
+                          <button class="btn btn-registrazione waves-effect waves-light orange white-text " type="submit" name="action">Figo, Voglio Aiutarvi!</button>
+                      </div>
+                    </form>
+                  </div>
+              <!--End mc_embed_signup-->
             </div>
           </div>
         </div>
