--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
           <h5 class="black-text">Contattaci</h5>
           <a href="mailto:fedcamps@gmail.com" target="_blank" class="social-icon">
           <i class="far fa-envelope"></i></a>
-          <a href="https://https://www.facebook.com/fedcamps" target="_blank" class="social-icon">
+          <a href="https://www.facebook.com/fedcamps" target="_blank" class="social-icon">
           <i class="fab fa-facebook"></i></a>
           <a href="https://www.instagram.com/fedcamps/" target="_blank" class="social-icon">
           <i class="fab fa-instagram"></i></a>
