--- a/thank-you.html
+++ b/thank-you.html
@@ -60,7 +60,7 @@
           <h5 class="black-text">Se hai bisogno Contattaci o meglio ancora seguici sui Social</h5>
           <a href="mailto:fedcamps@gmail.com" target="_blank" class="social-icon">
           <i class="far fa-envelope"></i></a>
-          <a href="https://https://www.facebook.com/fedcamps" target="_blank" class="social-icon">
+          <a href="https://www.facebook.com/fedcamps" target="_blank" class="social-icon">
           <i class="fab fa-facebook"></i></a>
           <a href="https://www.instagram.com/fedcamps/" target="_blank" class="social-icon">
           <i class="fab fa-instagram"></i></a>
